--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Ruby on rails tutorial : sample app |Contact</title>
+</head>
+<body>
+<h1>Contact us</h1>
+<p>This is the contact page for sample application</p>
+</body>
+</html>
