--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Ruby on rails tutorial : sample app |Home</title>
+</head>
+<body>
+<h1>Sample application</h1>
+<p>This is the home page for sample application</p>
+</body>
+</html>
