--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Ruby on rails tutorial : sample app | <%= @title %></title>
+	<title><%= title%></title>
 	<%= csrf_meta_tag %>
 </head>
 <body>
