added custom CSS

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
 
 <h1>Sample application</h1>
 <p>This is the home page for sample application</p>
+<%= link_to "Sign up now",'#',:class => "signup_button round"%>
