did some page mods

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,4 @@
 <h1>Contact us</h1>
 <p>This is the contact page for sample application</p>
+<p>Created by Kannan Maikeffi</p>
+<p>Mobile +91 9940499001</p>
