completed user sign up

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 
-<h1>Sample application</h1>
-<p>This is the home page for sample application</p>
+<h1>Stitch me </h1>
+<p>This is the home page for Stichme.in </p>
 <%= link_to "Sign up now !",signup_path,:class => "signup_button round"%>
