--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Sign up</h1>
-<%= form_for(@user) do |f| %>
+<%= form_for @user, :validate => true do |f| %>
+	<%= render "shared/error_messages" %>
 	<div clas = "fields">
 		<%= f.label :name %> <br />
 		<%= f.text_field :name%>
