--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,7 +17,7 @@
 		<%= f.label :password_confirmation, "Confirmation" %> <br />
 		<%= f.password_field :password_confirmation%>
 	</div>
-	<div clas = "actoins">
+	<div clas = "actions">
 		<%= f.submit "Sign up" %> <br />
 		
 	</div>
