--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,14 +5,16 @@
 			<ul>
 				<li><%= link_to "Home", root_path %></li>
 				<% if signed_in? %>
-					<li><%= link_to "Profile", user_path(current_user) %></li>
+					<li><%= link_to "My Account", user_path(current_user) %></li>
 				<% end %>
-				<li><%= link_to "Help", help_path %></li>
+				<li><%= link_to "24x7 Support", help_path %></li>
 				<% if signed_in? %>
 					<li><%= link_to "Sign out", signout_path %></li>
 				<% else %>
 					<li><%= link_to "Sign in", signin_path %></li>
+					<li><%= link_to "Sign up now !",signup_path %></li>
 				<% end %>
+				
 			</ul>	
 		</nav>
 </header>
