--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
-
 <h1>Stitch me </h1>
-<p>This is the home page for Stichme.in </p>
-<% if !signed_in? %>
-<%= link_to "Sign up now !",signup_path,:class => "signup_button round"%>
-
-<% end %>
+<p>New and Fresh Salwar Kameez Designs and Churidar Kameez Collection </p>
+<p>Specially designed and stiched for each women</p>
+<div id = "slide" >
+	<iframe id = "slideshow" src="http://www.googleimageslideshow.com/#advanced/search-advanced-query=churidar+designs&site=&safesearch=Moderate&imageSize=Large&colorization=--&colorFilter=--&fileType=--&imageType=--&rights=--" frameborder="0" scrolling="no">
+	  <p>Your browser does not support iframes.</p>
+	</iframe>
+</div>
