--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,8 +11,8 @@
 				<% if signed_in? %>
 					<li><%= link_to "Sign out", signout_path %></li>
 				<% else %>
-					<li><%= link_to "Sign in", signin_path %></li>
-					<li><%= link_to "Sign up now !",signup_path %></li>
+					<li><%= link_to "Login in", signin_path %></li>
+					<li><%= link_to "Sign up!",signup_path %></li>
 				<% end %>
 				
 			</ul>	
