--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -2,8 +2,9 @@
 .container{
 width: 710px;
 }
-body{
-background: #cff;
+body{background:#FFF; text-align:center; 	font-family:/*"Trebuchet MS", */Arial, Helvetica, sans-serif;
+	font-size:12px;
+	color:#000000;
 }
 header{
 padding-top: 20px;
