--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 <h1>New and Fresh Salwar Kameez Designs and Churidar Kameez Collection </h1>
-<p>Specially designed and stiched for every women</p>
+<h1>Specially designed and stiched for every women</h1>
 <div id = "slide" >
 	<iframe id = "slideshow" src="http://www.googleimageslideshow.com/#advanced/search-advanced-query=churidar+designs&site=&safesearch=Moderate&imageSize=Large&colorization=--&colorFilter=--&fileType=--&imageType=--&rights=--" frameborder="0" scrolling="no">
 	  <p>Your browser does not support iframes.</p>
