--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,8 +1,11 @@
-
+* { margin:0; padding:0; }
 .container{
 width: 710px;
 }
-body{background:#FFF; text-align:center; 	font-family:/*"Trebuchet MS", */Arial, Helvetica, sans-serif;
+body{
+	background:#FFF; 
+	
+	
 	font-size:12px;
 	color:#000000;
 }
@@ -12,6 +15,7 @@ padding-top: 20px;
 header img{
 padding: 1em;
 background: #fff;
+vertical-align:top;
 }
 section{
 margin-top: 1em;
@@ -19,9 +23,15 @@ font-size: 120%;
 padding: 20px;
 background: #fff;
 }
-section h1{
-font-size: 200%;
-}
+/* Headings */
+h1,h2,h3,
+h4,h5,h6      { margin:0 0 5px; line-height:1.35; color:#0a263c; text-align:center; 	 }
+h1            { font-size:20px; font-weight:normal; }
+h2            { font-size:18px; font-weight:normal; }
+h3            { font-size:16px; font-weight:bold; }
+h4            { font-size:14px; font-weight:bold; }
+h5            { font-size:12px; font-weight:bold; }
+h6            { font-size:11px; font-weight:bold; }
 /* Links */
 a{
 color: #09c;
